Fix: Center header items on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,11 @@
   .hero-ring {
     @apply absolute inset-0 border-2 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full border-emerald-300/5 shadow-[0_0_80px_inset] shadow-emerald-300/5;
   }
+
+  :where(h1) {
+    margin-block: 0.67em;
+    font-size: 2em;
+  }
 }
 
 @layer utilities {
